--- a/package.json
+++ b/package.json
@@ -10,18 +10,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/checkbox": "^0.5.12",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@reduxjs/toolkit": "^1.8.4",
+    "axios": "^1.7.2",
     "expo": "^50.0.8",
     "expo-font": "~11.10.3",
     "expo-status-bar": "~1.11.1",
     "material-components-web": "^14.0.0",
     "react": "18.2.0",
-    "react-currency-formatter": "^1.1.0",
     "react-dom": "18.2.0",
+    "react-intl": "^6.6.8",
     "react-native": "0.73.4",
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "~2.14.0",
@@ -35,7 +38,8 @@
     "react-native-web": "~0.19.6",
     "react-redux": "^8.0.2",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "tailwindcss-react-native": "^1.7.10"
+    "tailwindcss-react-native": "^1.7.10",
+    "typescript": "^5.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
